--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -21,7 +21,7 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build and push
+      - name: Build and pushS
         uses: docker/build-push-action@v5
         with:
           context: .
