--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,6 +1,5 @@
 name: Build and Push Docker Image
 
-# main ブランチに push したときに自動実行
 on:
   push:
     branches:
@@ -15,14 +14,13 @@ jobs:
       packages: write
 
     steps:
-      # リポジトリのコードをチェックアウト
       - uses: actions/checkout@v3
+        with:
+          submodules: recursive  # サブモジュールを含める
 
-      # Docker Buildx をセットアップ
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      # GitHub Container Registry にログイン
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v2
         with:
@@ -30,18 +28,11 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      # Docker イメージをビルドして push
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
           context: .
           push: true
-          tags: ghcr.io/rrst-nhk-project/rrst-ros2-ws-docker:latest
-
-      # （オプション）最新のコミット SHA をタグとして追加
-      - name: Tag image with SHA
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          push: true
-          tags: ghcr.io/rrst-nhk-project/rrst-ros2-ws-docker:${{ github.sha }}
+          tags: |
+            ghcr.io/rrst-nhk-project/rrst-ros2-ws-docker:latest
+            ghcr.io/rrst-nhk-project/rrst-ros2-ws-docker:${{ github.sha }}
